--- a/model/feature_eng.ipynb
+++ b/model/feature_eng.ipynb
@@ -13,7 +13,7 @@
     "from xgboost import XGBClassifier\n",
     "from numpy import corrcoef\n",
     "from pathlib import Path\n",
-    "import pickle\n"
+    "import pickle"
    ]
   },
   {
